--- a/AI_MATH/벡터.md
+++ b/AI_MATH/벡터.md
@@ -1,7 +1,94 @@
 # 벡터 : 원점으로부터의 상대적인 위치 
 숫자를 원소로 가지는 **리스트** 또는 **배열**로 표현
 
+벡터는 다음과 같이 구현할 수 있다.
+
 ```
 import numpy as np
 x=np.array([1,2,3])
 ```
+
+## 스칼라 곱 : 길이 변경 연산
+
+![image](https://user-images.githubusercontent.com/57162812/149760382-cd0bf6d3-4ca5-4c6d-9ac9-dc448ead1bd2.png)
+
+- |α|<1 : 길이 감소
+- |α|>1 : 길이 증가
+- α<0 : 반대 방향
+- α>0 : 방향 유지
+
+## 벡터 덧셈, 뺄셈, 성분곱
+- 두 벡터의 차원이 같을 경우에 가능한 연산
+
+![image](https://user-images.githubusercontent.com/57162812/149761035-f20ca1dc-f35e-4637-99ef-68394af5e1d2.png)
+
+![image](https://user-images.githubusercontent.com/57162812/149760972-c2e9d16d-85b8-47db-baad-35cf99362f07.png)
+
+```python
+def sum(x, y):
+  return x+y
+  
+def diff(x, y):
+  return x-y
+
+def multi(x, y):
+  return x*y
+```
+
+## 벡터의 norm : 원점과의 거리
+
+### L1 norm
+![image](https://user-images.githubusercontent.com/57162812/149761467-28cc7826-cd25-4c02-bf39-17ae4a848124.png)
+
+```python
+import numpy as np
+
+def l1_norm(x):
+  return np.sum(np.abs(x))
+```
+
+### L2 norm
+![image](https://user-images.githubusercontent.com/57162812/149761657-5d0de73c-81fe-4fa7-822e-f3055a286175.png)
+
+```python
+import numpy as np
+
+def l2_norm(x):
+  return np.sqrt(np.sum(x*x))
+```
+### L1 norm과 L2 norm의 차이
+
+두 norm의 차이는 기하학적인 성질에서 생긴다.
+
+![image](https://user-images.githubusercontent.com/57162812/149762295-d5cdb28a-00fa-4d38-9824-109e9c1e7fe9.png)
+
+- L1 norm : 같은 길이에 대한 점들의 집합을 보면 마름모형
+- L2 norm : 같은 길이에 대한 점들의 집합을 보면 원형
+
+## 두 벡터 사이의 거리
+
+두 벡터 사이의 거리는 두 벡터의 차의 norm으로 계산
+
+# 두 벡터 사이의 각도
+
+![image](https://user-images.githubusercontent.com/57162812/149762933-fef65f6b-ad44-4ba9-94e8-460c1d9c84df.png)
+
+```python
+import numpy as np
+
+theta=np.arccos(np.inner(x, y)/(l2_norm(x)*l2_norm(y)))
+```
+## 두 벡터의 내적
+
+![image](https://user-images.githubusercontent.com/57162812/149763310-28f9066f-4125-43a3-8d85-df739e6a5909.png)
+
+### 두 벡터의 정사영
+
+![image](https://user-images.githubusercontent.com/57162812/149763418-76ff3e4f-ce10-4b28-a92e-08a77c58a0be.png)
+
+![image](https://user-images.githubusercontent.com/57162812/149763882-683f7d03-a1a3-4c34-8fc1-c3717bc219d0.png)
+
+![image](https://user-images.githubusercontent.com/57162812/149764067-dc9d66be-e301-485b-8781-17cdb48d0293.png)
+
+
+
