--- a/AI_MATH/경사 하강법.md
+++ b/AI_MATH/경사 하강법.md
@@ -81,4 +81,7 @@ for t in range(T):
 
 ### SGD의 원리 : 미니배치 연산
 - 경사하강법은 전체 데이터 D=(X, y)에 대하여 gradeint vector를 연산
-- SGD는 전체 데이터 D의 부분집합인 미니배치를 가지고 gradient vector 연산 : 미니 배치를 확률적으로 선택하므로 목적식의 모양이 바뀐다. : 극소값이 탈출 가능하다. : convex 함수가 아니더라도 최솟값 수렴을 보장할 수 있다.
+- SGD는 전체 데이터 D의 부분집합인 미니배치를 가지고 gradient vector 연산   
+: 미니 배치를 확률적으로 선택하므로 목적식의 모양이 바뀐다.  
+: 극소값이 탈출 가능하다.  
+: convex 함수가 아니더라도 최솟값 수렴을 보장할 수 있다.  
