--- a/회고록/1주차.md
+++ b/회고록/1주차.md
@@ -1,1 +1,91 @@
+### 2022.01.17 MON
+#### 학습 목표/완료 상황
+- [X] Python 2-1까지 완료
+- [X] Python 기본과제 1,2 완료
+- [X] AI MATH 2강 완료
+- [ ] 면접 스터디 8문제 완료
+   - [X] 4문제 완료
 
+#### 피어세션
+
+첫만남은 항상 설레면서도 어색하다. 하지만 모두 좋으신 분들인 것 같아서 기대된다.  
+이전 기수 분들의 아이디어를 빌려 면접 스터디를 진행하기로 했다. 스타트가 나여서 조금 긴장이 되지만 그만큼 준비를 열심히 해야겠다.
+
+---
+
+### 2022.01.18 TUE
+#### 학습 목표/완료 상황
+- [X] 면접 질문 4문제
+- [X] AI MATH 2개 강의 및 퀴즈
+- [X] Python 3-2 강까지 완료
+- [X] Python 기본과제3 완료
+- [ ] 잡킬 앤 하이드 1.18일자 문제
+
+#### 피어세션
+
+오늘은 면접 스터디 확률/통계 파트 첫 발표날이다. 누군가에게 나의 정보를 전달해주는 일은 쉽지 않겠지만 그래도 최선을 다해서 노력했다. 그 결과 많은 분들이 나의 노력을 알아주셨고 칭찬해주셨다. 그렇지만 준비하는 시간이 너무 오래 거렸다.
+
+---
+
+### 2022.01.19 WED
+#### 학습 목표/완료 상황
+- [X] AI MATH 2개 강의 및 퀴즈
+- [X] Python 5-2 강까지 완료
+- [ ] 알고리즘 문제 하나
+- [X] 심화과제 1문제 완료
+
+#### 피어세션
+
+오늘은 승현님의 발표날이다. 승현님께서 여러가지 예제와 함께 설명을 해주셔서 너무 이해가 잘 되었다. 하지만 아직 '가능도와 확률의 차이' 는 완벽하게 이해하지 못한 것 같다. 더 찾아봐야겠다.
+
+---
+
+### 2022.01.20 THU
+#### 학습 목표/완료 상황
+- [ ] 파이썬 7-2강까지 수강
+- [X] AI MATH 7,8강 수강 및 퀴즈 제출
+  - [X] AI MATH 9,10강 수강 및 퀴즈 제출
+- [ ] 심화과제 2번
+  - [X] 심화과제 3번
+- [ ] 잡킬 앤 하이드
+
+#### 피어세션
+
+오늘은 성휴님의 발표날이다. 성휴님께서 마지막 문제로 시애틀 문제를 가지고 오셔서 다같이 토의하는 시간을 가졌다. 토론하는 시간을 가지는 것은 다양한 의견을 들어볼 수 있어 좋았다.
+
+[시애틀 문제](https://nobsai.tistory.com/9)
+
+면접 스터디를 준비하는데에 걸리는 시간이 오래 걸리는 것 같아 방법을 다시 생각해보기로 했다.
+
+---
+
+### 2022.01.20 FRI
+#### 학습 목표/완료 상황
+- [X] 파이썬 완강
+- [X] 심화과제 2번
+- [X] 알고리즘 1문제 완료
+
+#### 스패셜 피어세션
+
+랜덤으로 5명의 사람이 모여서 의견을 펼치는 자리이다. 누가 올지 모르는 자리에 떨렸다. 어색한 침묵만이 흐를것이라는 예상과 다르게 모르는 사람들과 각자 조에서 어떻게 진행하고 앞으로의 방향은 어떻게 나아갈지 의견을 나누다보니 좋은 정보들만 얻어갈 수 있는 시간이었다. 조원들과 다른 조들의 좋았던 진행방향들에 대해서 함께 이야기 해보아야겠다.
+
+#### 피어세션
+
+면접 질문을 하루에 3문제씩 5일동안 하기로 하였다. 이해하기에도 적당한 양인 것 같고 시간도 적절하게 투자할 수 있을 것 같다. 나는 화요일이다.  
+또한 강의에 대한 집중이 필요한 것 같아서, 피어세션에 남은 시간동안 피어세션 전에 강의내용 관련한 3가지의 질문사항을 들고와 의견을 나누어보기로 하였다. 다른 사람들의 질문들에 대해서 들어보면 놓쳤던 부분들에 대해서도 다시 생각해볼 수 있는 시간이 될 수 있을 것이다.
+
+#### 멘토링
+
+첫 멘토링 시간이었다. 멘토님은 의료 데이터를 다루시는 분이며, 현재는 스마트팩토리 관련된 업무를 맡고 계신다고 하셨다.  
+또한 논문 스터디를 추천해주셨다. 내일 중으로 논문 리스트업 및 논문 스터디 예시를 보여주신다고 하셨다. 이에 대해서도 조원들과 상의해보고 앞으로 진행하면 좋을 사항인것 같다.
+
+---
+
+### 2022.01.21-22(Weekend)
+#### 학습 목표/완료 상황
+- [X] AI MATH 복습
+- [ ] 심화과제 다시 풍어보기
+  - [X] 1,3 완료
+  - [ ] 2번 미완료 : 오피스아워 강의 다시 들어보기
+- [X] 알고리즘 2문제 완료
+  - [X] 최단 경로 알고리즘(BFS, 다익스트라) : heapq 모듈 사용
