--- a/알고리즘/Fundamental_Notion/최단경로_알고리즘.md
+++ b/알고리즘/Fundamental_Notion/최단경로_알고리즘.md
@@ -63,22 +63,20 @@ def BFS(graph,root):
 ```python
 import heapq
 
-def dijkstra(graph, start):
-    distances={node : float('int) for node in graph}
-    distances[start]=0
-    queue=[]
-    heapq.heappush(queue,[distances[start],start])
+def dijkstra(graph, K):
+    dist=[sys.maxsize for _ in range(V+1)]
+    heap=[]
+    heapq.heappush(heap,(0,K))
+    dist[K]=0
     
-    while queue:
-        current_distance, current_destination=heapq.heappop(queue)
-        if distances[current_destination]<current_distance:
-            continue
-        for new_destination, new_distance in graph[current_destination].items():
-            distance=current_distance+new_distance:
-            if distance<distances[new_destination]:
-                distances[new_destination]=distance
-                heapq.heappush(queue,[distance, new_destination])
-    return distances
+    while heap:
+    cost,v=heapq.heappop(heap)
+    for e, weight in graph[v]:
+        if dist[e]>cost+weight:
+            dist[e]=cost+weight
+            heapq.heappush(heap,(dist[e],e))
+    
+    return dist
 ```
     
     
