--- a/알고리즘/Fundamental_Notion/최단경로_알고리즘.md
+++ b/알고리즘/Fundamental_Notion/최단경로_알고리즘.md
@@ -54,7 +54,7 @@ def BFS(graph,root):
 >
 >어느 날 1번 컴퓨터가 웜 바이러스에 걸렸다. 컴퓨터의 수와 네트워크 상에서 서로 연결되어 있는 정보가 주어질 때, 1번 컴퓨터를 통해 웜 바이러스에 걸리게 되는 컴퓨터의 수를 출력하는 프로그램을 작성하시오.
 
-[code]()
+[code](https://github.com/leehyeonjin99/BOOSTCAMP_AI_Tech_Study_Diary/blob/main/%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98/baekjoon/2606.py)
 
 ### Dijkstra
 #### Dijkstra 구현방법
@@ -79,4 +79,13 @@ def dijkstra(graph, K):
     return dist
 ```
     
-    
+#### 관련 문제 및 코드
+
+[백준1504](https://www.acmicpc.net/problem/1504)
+
+> 문제
+> 방향성이 없는 그래프가 주어진다. 세준이는 1번 정점에서 N번 정점으로 최단 거리로 이동하려고 한다. 또한 세준이는 두 가지 조건을 만족하면서 이동하는 특정한 최단 경로를 구하고 싶은데, 그것은 바로 임의로 주어진 두 정점은 반드시 통과해야 한다는 것이다.
+> 
+> 세준이는 한번 이동했던 정점은 물론, 한번 이동했던 간선도 다시 이동할 수 있다. 하지만 반드시 최단 경로로 이동해야 한다는 사실에 주의하라. 1번 정점에서 N번 정점으로 이동할 때, 주어진 두 정점을 반드시 거치면서 최단 경로로 이동하는 프로그램을 작성하시오.
+
+[code](https://github.com/leehyeonjin99/BOOSTCAMP_AI_Tech_Study_Diary/blob/main/%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98/baekjoon/1504.py)
