--- a/알고리즘/Fundamental_Notion/최단경로_알고리즘.md
+++ b/알고리즘/Fundamental_Notion/최단경로_알고리즘.md
@@ -14,7 +14,7 @@
   - Bellman Ford: 음수 가중치의 간선이 존재할 때
 
 2. 하나의 정점에서 다른 모든 정점까지 최단 경로를 구하는 문제
-- Floyd Warchall
+- Floyd Warshall
 
 ### BFS : 너비 우선 탐색
 
@@ -89,3 +89,85 @@ def dijkstra(graph, K):
 > 세준이는 한번 이동했던 정점은 물론, 한번 이동했던 간선도 다시 이동할 수 있다. 하지만 반드시 최단 경로로 이동해야 한다는 사실에 주의하라. 1번 정점에서 N번 정점으로 이동할 때, 주어진 두 정점을 반드시 거치면서 최단 경로로 이동하는 프로그램을 작성하시오.
 
 [code](https://github.com/leehyeonjin99/BOOSTCAMP_AI_Tech_Study_Diary/blob/main/%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98/baekjoon/1504.py)
+
+### Bellman-Ford
+
+- 한 노드에서 다른 노드까지의 최단 거리를 구하는 알고리즘
+- 간선의 가중치가 음수일 때도 최단 거리 구할 수 
+
+#### Bellman-Ford 구현 방법
+
+```python
+# E : 간선 수, N : 정점 수
+
+edges=[]
+distance=[sys.maxsize for _ in range(N)]
+for _ in range(E):
+  u,v,w=map(int,sys.stdin.readline().split())
+  edges.append([u,v,w])
+  
+def Bellman_Ford(start):
+    distance[start]=0
+    
+    for i in range(N):
+      for j in range(E):
+        node=edges[j][0]
+        next_node=edges[j][1]
+        cost=edges[j][2]
+        if dist[node]!=sys.maxsize and dist[next_node]>dist[node]+cost:
+          if i==N-1: # Negative Cycle 발견
+            return True
+    return False
+
+Negative_Cycle=Bellman_Ford(start)
+```
+
+#### 관련 문제 및 코드
+
+[백준11657](https://www.acmicpc.net/problem/11657)
+
+> 문제
+> N개의 도시가 있다. 그리고 한 도시에서 출발하여 다른 도시에 도착하는 버스가 M개 있다. 각 버스는 A, B, C로 나타낼 수 있는데, A는 시작도시, B는 도착도시, C는 버스를 타고 이동하는데 걸리는 시간이다. 시간 C가 양수가 아닌 경우가 있다. C = 0인 경우는 순간 이동을 하는 경우, C < 0인 경우는 타임머신으로 시간을 되돌아가는 경우이다.
+> 
+> 1번 도시에서 출발해서 나머지 도시로 가는 가장 빠른 시간을 구하는 프로그램을 작성하시오.
+
+[code](https://github.com/leehyeonjin99/BOOSTCAMP_AI_Tech_Study_Diary/blob/main/%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98/baekjoon/11657.py)
+
+### Floyd-Warchall
+- 모든 최단 경로를 구하는 알고리즘
+- 다익스트라는 하나의 정점에서 다른 모든 정점까지의 최단거리를 구하는 알고리즘이라면, 플로이드-워셜 알고리즘은 **한 번 실행하여 모든 노드 간 최단 경로**를 구할 수 있다.
+- 음의 간선도 사용할 수 있다.
+
+#### Floyd-Warshall 구현 방법
+
+```python
+import sys
+INF=sys.maxsize
+
+# A: 그래프, N: 정점의 개수
+def Floyd_Warshall(A,N):
+  dist=[[INF for _ in range(N)] for _ in range(N)]
+  
+  # 최단 경로 배열 초기화
+  for i in range(N):
+      for j in range(N):
+          dist[i][j]=A[i][j]
+  
+  for k in range(N): # 거쳐가는 점
+      for i in range(N): # 시작점
+          for j in range(N): # 끝점
+              dist[i][j]=min(dist[i][j],dist[i][k]+dist[k][j])
+              
+  return dist
+```
+
+#### 관련 문제 및 코드
+
+[백준11404](https://www.acmicpc.net/problem/11404)
+
+> 문제
+> n(2 ≤ n ≤ 100)개의 도시가 있다. 그리고 한 도시에서 출발하여 다른 도시에 도착하는 m(1 ≤ m ≤ 100,000)개의 버스가 있다. 각 버스는 한 번 사용할 때 필요한 비용이 있다.
+> 
+> 모든 도시의 쌍 (A, B)에 대해서 도시 A에서 B로 가는데 필요한 비용의 최솟값을 구하는 프로그램을 작성하시오.
+
+[code](https://github.com/leehyeonjin99/BOOSTCAMP_AI_Tech_Study_Diary/blob/main/%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98/baekjoon/11404.py)
