--- a/회고록/4주차.md
+++ b/회고록/4주차.md
@@ -47,3 +47,33 @@ output_tensor = reduce(input_tensor, 'b c (h h2) (w w2) -> b h w c', 'mean', h2=
 # copy along a new axis 
 output_tensor = repeat(input_tensor, 'h w -> h w c', c=3)
 ```
+
+### 2022.02.10 THU
+#### 학습 목표/완료 상황
+- [x]  Data VIz 1-3강+학습정리
+- [x]  DL Basic 9-10강 정리
+- [x]  심화과제 2
+- [x]  코테 1문제
+- [ ]  resnet 정리
+
+#### 피어세션
+- 면접 질문 스터디
+  - Feature Vector
+    - Data의 각 특징들을 모아놓은 Vector
+  - 좋은 모델이란?
+    - 고려사항 : 정확성, 속도, 크기
+   - 작은 의사결정나무가 큰 의사결정나무보다 괜찮은가?
+    - 의사결정나무는 모델의 크기가 커질수록 과대적합이되는 경우가 있다.
+    - 해결책 : 가지치기
+
+  - 논문 스터디 : EfficientNet
+    - 컴퓨터 자원의 한계, 여유에 맞춰 network의 depth, width, resolution을 모두 scale up 하는 방법에 대한 정량적인 해법 및 새로운 network 제시
+    - Depth scale up : generalization performance 향상, capture richer, complex feature / vanishing gradient
+    - Width scale up : 보통 작은 network에서 사용 / fine-grained feature를 더 잘 뽑아내고 train이 쉽다. / 너무 넓고 얕은 network는 higher level feature를 뽑아내기 어렵다.
+    - Resolution scale up : potential fine-grained patternㅇ르 잘 뽑아낸다
+
+#### 오피스 아워
+- ViT
+- AAE
+
+직접 작성해보며 구현해볼 필요가 있을 것 같다.
