--- a/회고록/4주차.md
+++ b/회고록/4주차.md
@@ -80,3 +80,28 @@ output_tensor = repeat(input_tensor, 'h w -> h w c', c=3)
 직접 작성해보며 구현해볼 필요가 있을 것 같다.
 
 ---
+
+### 2022.02.11 FRI
+#### 학습 목표/완료 상황
+- [x]  심화 과제 1,2 따라 해보기
+- [x]  LSTM 모델 따라 해보기
+- [ ]  ResNet 논문 정리
+- [ ]  SqueezeNet 논문 읽기 시작
+- [x]  코팅 테스트 1문제
+
+#### 피어세션
+- 면접 질문 스터디
+  - 스팸필터로 Logistic Regression 사용 이유는?
+    - Logistic Regression : 데이터가 어떤 범주에 속할 확률을 0과 1 사이의 값으로 예측하고 그 확률에 따라 더 높은 가능성의 범주로 분류하는 지도 학습 기법
+    - S자 모형의 함수가 필요하며, 0과 1 사이의 값으로 표현해야하기 때문에 Logistic Regression을 사용한다.
+  - OLS Regression 공식
+    - 오차의 제곱을 최소화하는 w와 b의 값을 찾는 방식
+  - 딥러닝
+    - 인간의 신경망을 모방한 심층신경망 이론을 기반으로 고안된 머신러닝 방식의 일종으로 수많은 패턴 속에서 스스로 패턴을 학습한다.
+    - 머신러닝은 컴퓨터에게 먼저 다양한 정보를 가르치고 그 학습한 결과에 따라 컴퓨터가 새로운 것을 예측 딥러닝은 머신러닝의 심화된 기술로서 인간의 가르침이라는 과정을 거치지 않아도 스스로 학습하고 미래의 상황을 예측한다.
+
+#### 멘토링
+
+- OCT 데이터를 통한 안구 질환 분류 : 정상/고도 난시/그 외의 질병 : 좌우 반전에 대해 mirroring 전처리 사용
+- 음성 데이터를 통한 파킨슨 질병 분류 : 음성 데이터 전처리 : 단위별로 나누어 특정값 이상이면 copy, 아니면 pass
+- Toy project 및 augmentation 기법들 적용해보기
