--- a/회고록/4주차.md
+++ b/회고록/4주차.md
@@ -6,6 +6,18 @@
 - [ ]  Kaggle Notebook  1개 따라해보기
 
 #### 피어세션
+- 면접 질문 스터디 : 발표자 재홍님
+---
+### 2022.02.08 TUE
+#### 학습 목표/완료 상황
+- [X]  강의 4-8강+내용정리+퀴즈+과제
+- [X]  코테 1문제
+- [X]  면접 질문 준비
+
+#### 피어세션
+- 면접 질문 스터디 : 발표자 승현님
+- 논문 리뷰 : 발표자 성휴님
+  - ResNet
 
 ---
 
