--- a/회고록/5주차.md
+++ b/회고록/5주차.md
@@ -41,3 +41,33 @@
 #### 피어세션
 - 논문 정리 : 승현님
   - UNet
+
+### 2022.02.17 THU
+#### 학습 목표/완료 상황
+- [x]  개론 4-5강 복습
+- [x]  AI 현업자 특강 4강
+- [x]  데이터 시각화 7강
+- [x]  코테 1문제
+- [ ]  EfficientNet 구현
+
+#### 피어세션
+- 논문 정리 : 성휴님
+  - UPSNet
+- 이전 기수 프로젝트 정리 : 성휴님
+
+### 2022.02.18 FRI
+#### 학습 목표/완료 상황
+- [x]  코테 1문제
+- [x]  특강 5강
+- [ ]  EfficientNet 구현 마무리
+- [ ]  UNet 논문 정리
+- [x]  강의 복습
+
+#### 피어세션
+- 논문 정리
+  - Faster R-CNN : 승현님
+  - YOLO : 재홍님
+  - UPSNet : 성휴님
+
+#### 멘토링
+- 드론과 AI를 합쳐 외벽 금간거 확인하는 프로젝트 설명
