--- a/Level2_Data_Creation_OCR/2022.04.16.md
+++ b/Level2_Data_Creation_OCR/2022.04.16.md
@@ -42,10 +42,21 @@
 
 
 # ✔️피드백
+### 알게된 점
+- 해당 OCR task에서는 Adam 계열에서 성능이 좋게 나왔다.
+- Adam 계열과 SGD 계열을 비교해 보았을 때, 실험 내용 중 SGD는 0.1 그리고 Adam은 0.001에서 최적의 값을 가졋다.
+
 ### 아쉬운 점
-- CUDA와 pytorch의 버전 호환 문제로 pytorch version을 1.7.1에서 1.11.0으로 업그레이드 하지 못하였다. 따라서, NAdam, RAdam을 실험해보지 못한 점이 아쉽다. 물론, CUDA의 버전을 바꿔줄 수도 있었겠지만, 앞에서의 실험과 일관성을 위해서 유지하였다.
-    
-    > CUDA 11.0은 torch 1.7.1과 호환 가능하다.
-    [previous pytorch version](https://pytorch.org/get-started/previous-versions/)
+- CUDA와 pytorch의 버전 호환 문제로 pytorch version을 1.7.1에서 1.11.0으로 업그레이드 하지 못하였다. 따라서, NAdam, RAdam을 실험해보지 못한 점이 아쉽다. 물론, CUDA의 버전을 바꿔줄 수도 있었겠지만, 앞에서의 실험과 일관성을 위해서 유지하였다.  
+  > CUDA 11.0은 torch 1.7.1과 호환 가능하다.
+  [previous pytorch version](https://pytorch.org/get-started/previous-versions/)
+  
 ### 앞으로의 방향
-- 최적의 `Optimizer` + `Learning Rate`의 
+- 최적의 `Optimizer` + `Learning Rate`의 최적의 조합을 찾은 후 고정하여 가자 Learning Rate를 조절하는 `Scheduler`에 대해서 실험한다.
+- torch를 upgrade가 가능하도록 CUDA를 설정해본다.
+
+
+
+
+
+
