결과표 추가

--- a/Level2_Data_Creation_OCR/2022.04.16.md
+++ b/Level2_Data_Creation_OCR/2022.04.16.md
@@ -39,7 +39,7 @@
 
 ### 결과
 
-
+<img width="880" alt="스크린샷 2022-04-17 오후 9 24 56" src="https://user-images.githubusercontent.com/57162812/163714171-c930fed3-3b0c-4f96-998b-727cfbaafb5c.png">
 
 # ✔️피드백
 ### 알게된 점
