--- a/Level2_Data_Creation_OCR/2022.04.16.md
+++ b/Level2_Data_Creation_OCR/2022.04.16.md
@@ -1,7 +1,7 @@
 # ✔️실험
 ### 실험 목표
 
-- OCR task에 알맞는 *Optimizer* 및 *Learning rate*에 대해서 찾을 있다.
+- OCR task에 알맞는 *Optimizer* 및 *Learning rate*에 대해서 찾을 수 있다.
 
 ### 동기
 
