--- a/Level2_Data_Creation_OCR/2022.04.17.md
+++ b/Level2_Data_Creation_OCR/2022.04.17.md
@@ -17,15 +17,23 @@
 ### 과정
 
 - `torch.optim.lr_scheduler` 모듈에 존재하는  scheduler를 사용하였다.
-  - MultiStepLR
-  - MultiplicativeLR
-  - CosineAnnealingLR
-  - ReduceLROnPlateau
+  - [ ] MultiStepLR
+  - [ ] MultiplicativeLR
+  - [ ] CosineAnnealingLR
+  - [ ] ReduceLROnPlateau
 
 ### 결과
 <img width="938" alt="스크린샷 2022-04-18 오전 2 06 48" src="https://user-images.githubusercontent.com/57162812/163724993-e3e20cf4-13fb-4b8d-ace9-84bb014b0671.png">
 
 # ✔️피드백
 ### 알게된 점
+- 다양한 scheduler에 대해서 알아볼 수 있었다.
 ### 아쉬운 점
+- 해당 scheduler를 적절하게 설정하기 위해서 필요한 parameter에 대해서 알아볼 필요성을 느꼈다.
 ### 앞으로의 방향
+
+- 데이터 추가 후 학습
+- scheduler 정리하기
+
+
+
