--- a/Level2_Data_Creation_OCR/2022.04.19.md
+++ b/Level2_Data_Creation_OCR/2022.04.19.md
@@ -20,6 +20,7 @@
 
 ### 아쉬운 점
 - validation set이 필요하다. 또한 validataion set에 대해서 F1 score, precision, recall을 측정해볼 필요가 있다.
+- mean loss는 test dataset에 대한 성능 예측에 도움이 되지 않았다.
 
 ### 앞으로의 방향
 - [X] ~~validation dataset 만들기~~ 정현 캠퍼님께서 해결
